# explainable-melanoma

./: .gitignore  CITATION.cff  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.drawio
docs/presentation/: MelanomaNet_Presentation.pptx
docs/report/: cvpr.sty  main.tex  references.bib
docs/report/sections/: conclusion.tex  discussion.tex  experiments.tex  introduction.tex  methods.tex  related_work.tex
scripts/: eval.py  eval_faithfulness.py  generate_concepts.py  generate_paper_figures.py  infer.py  run_seeds.py  train.py  train_fastcav.py
src/melanomanet/: __init__.py  cli.py  config.py
src/melanomanet/abcde/: __init__.py  alignment.py  analyzer.py  features.py  reporting.py  segmentation.py
src/melanomanet/data/: __init__.py  dataloader.py  dataset.py  transforms.py
src/melanomanet/engine/: __init__.py  predict.py  train.py
src/melanomanet/evaluation/: __init__.py  evaluate.py  faithfulness.py  plots.py  seeds.py
src/melanomanet/explainability/: __init__.py  concepts.py  dataset.py  fastcav.py  models.py  train_cavs.py  utils.py
src/melanomanet/inference/: __init__.py  analyzers.py  artifacts.py  batch.py  core.py  loaders.py  models.py  paper_figures.py  report.py  visualization.py
src/melanomanet/models/: __init__.py  losses.py  melanomanet.py
src/melanomanet/uncertainty/: __init__.py  mc_dropout.py  models.py  temprature_scaling.py  utils.py
src/melanomanet/utils/: __init__.py  checkpoint.py  console.py  env.py  gradcam.py  images.py  metrics.py  uncertainty.py
tests/: test_config.py  test_faithfulness.py  test_metrics.py  test_paper_figures.py  test_seeds.py
