[project]
name = "explainable-melanoma"
version = "0.1.0"
description = "Explainable Melanoma Detection"
authors = [
    {name = "Sukhrob Ilyosbekov", email = "suxrobgm@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = "<3.15,>=3.14"

dependencies = [
    "Pillow>=12.3.0",
    "rich>=15.0.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "PyYAML>=6.0.3",
    "scikit-learn>=1.9.0",
    "matplotlib>=3.11.0",
    "seaborn>=0.13.2",
    "opencv-python>=4.13.0.92",
    "grad-cam>=1.5.5",
    "typer>=0.26.8",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]
gpu = [
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "mypy>=2.1.0",
    "poethepoet>=0.47.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/melanomanet"]

[tool.uv]
# Cloud-synced filesystem rejects hardlinks (os error 396)
link-mode = "copy"
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "gpu" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.poe.tasks]
train = "python scripts/train.py"
eval = "python scripts/eval.py"
infer = "python scripts/infer.py --input-dir data/sample_images"
generate-concepts = "python scripts/generate_concepts.py"
train-fastcav = "python scripts/train_fastcav.py"
paper-figures = "python scripts/generate_paper_figures.py --from-existing"
lint = "ruff check ."
format = "ruff format ."
typecheck = "mypy src scripts"
install-cpu = { cmd = "uv sync --extra cpu", help = "Sync with CPU-only PyTorch" }
install-gpu = { cmd = "uv sync --extra gpu", help = "Sync with CUDA 13.0 PyTorch" }

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
